overlays/development/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app-deployment
spec:
  replicas: 1 #replica-change
  template:
    spec:
      containers:
      - name: course-app-container
